--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,21 @@
 {
-  "compileOnSave": true,
   "compilerOptions": {
-    "skipLibCheck": true,
+    "module": "commonjs",
+    "target": "es5",
     "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "declaration": false,
+    "moduleResolution": "node",
     "typeRoots": [
-      "node_modules/@types"
+      "./node_modules/@types"
     ],
     "lib": [
       "es2016",
       "dom"
     ]
-  }
+  },
+  "exclude": [
+    "./node_modules"
+  ]
 }
