adding cli, bugfixing

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,9 @@
 /src/config/Config.ts
 /src/index.ts
+/src/translator.ts
+cli.ts
 node_modules/
 .idea/
 xlf-google-translate.iml
+package-lock.json
 .gitignore
