--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "xlf-google-translate",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-beta.8",
   "author": "Patrik J. Braun",
   "scripts": {
     "start": "node src/index.js"
+  },
+  "bin": {
+    "xlf-google-translate": "./cli.js"
   },
   "dependencies": {
     "google-translate-api": "2.3.0",
