--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "xlf-google-translate",
-  "version": "1.0.0-beta.8",
+  "version": "1.0.0-beta.11",
   "author": "Patrik J. Braun",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "mocha --recursive test"
   },
   "bin": {
     "xlf-google-translate": "./cli.js"
@@ -14,10 +15,15 @@
     "xml2js": "0.4.19"
   },
   "devDependencies": {
-    "@types/node": "^9.6.1",
+    "@types/chai": "^4.1.3",
+    "@types/mocha": "^5.2.0",
+    "@types/node": "^10.1.3",
     "@types/xml2js": "^0.4.2",
-    "tslint": "^5.9.1",
-    "typescript": "2.8.1",
-    "tslint-consistent-codestyle": "^1.13.0"
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "ts-node": "^6.0.5",
+    "tslint": "^5.10.0",
+    "tslint-consistent-codestyle": "^1.13.0",
+    "typescript": "2.8.3"
   }
 }
