--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xlf-google-translate",
-  "version": "1.0.0-beta.12",
+  "version": "1.0.0-beta.13",
   "author": "Patrik J. Braun",
   "scripts": {
     "start": "node src/index.js",
@@ -11,20 +11,20 @@
     "xlf-google-translate": "./cli.js"
   },
   "dependencies": {
-    "google-translate-api": "2.3.0",
-    "typeconfig": "^1.0.6",
+    "@k3rn31p4nic/google-translate-api": "1.0.5",
+    "typeconfig": "1.0.7",
     "xml2js": "0.4.19"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.2",
-    "@types/xml2js": "^0.4.3",
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-consistent-codestyle": "^1.14.0",
-    "typescript": "3.1.6"
+    "@types/chai": "4.1.7",
+    "@types/mocha": "5.2.5",
+    "@types/node": "10.12.18",
+    "@types/xml2js": "0.4.3",
+    "chai": "4.2.0",
+    "mocha": "5.2.0",
+    "ts-node": "7.0.1",
+    "tslint": "5.12.0",
+    "tslint-consistent-codestyle": "1.14.1",
+    "typescript": "3.2.2"
   }
 }
