--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
+    "noImplicitAny": true,
     "sourceMap": true,
     "declaration": true,
     "moduleResolution": "node",
