--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,10 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "target": "es2015",
+    "module": "commonjs",
     "lib": [
-      "es2017",
+      "es2018",
       "dom"
     ]
   }
