--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
   "name": "xlf-google-translate",
-  "version": "1.0.0-beta.22",
+  "version": "1.0.1",
   "author": "Patrik J. Braun",
   "scripts": {
     "start": "node src/index.js",
     "build": "tsc",
     "pretest": "npm run build",
-    "test": "mocha --recursive test/"
+    "test": "mocha --recursive test/",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "bin": {
     "xlf-google-translate": "./cli.js"
   },
   "dependencies": {
-    "typeconfig": "2.0.19",
-    "xml2js": "0.4.23"
+    "reflect-metadata": "0.2.2",
+    "typeconfig": "2.3.1",
+    "xml2js": "0.6.2"
   },
   "devDependencies": {
-    "@types/chai": "4.2.22",
-    "@types/mocha": "9.0.0",
-    "@types/node": "16.11.6",
-    "@types/xml2js": "0.4.9",
-    "chai": "4.3.4",
-    "mocha": "9.1.3",
-    "ts-node": "10.4.0",
-    "tslint": "5.20.1",
-    "tslint-consistent-codestyle": "1.16.0",
-    "typescript": "4.4.4"
+    "@types/chai": "5.2.2",
+    "@types/mocha": "10.0.10",
+    "@types/node": "24.1.0",
+    "@types/xml2js": "0.4.14",
+    "chai": "5.2.1",
+    "eslint": "9.32.0",
+    "eslint-plugin-chai-friendly": "^1.1.0",
+    "mocha": "11.7.1",
+    "ts-node": "10.9.2",
+    "tslib": "2.8.1",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.38.0"
   }
 }
