--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "xml2js": "0.6.2"
   },
   "devDependencies": {
-    "@types/chai": "5.2.2",
+    "@types/chai": "5.2.3",
     "@types/mocha": "10.0.10",
-    "@types/node": "24.1.0",
+    "@types/node": "24.9.1",
     "@types/xml2js": "0.4.14",
-    "chai": "5.2.1",
-    "eslint": "9.32.0",
-    "eslint-plugin-chai-friendly": "^1.1.0",
-    "mocha": "11.7.1",
+    "chai": "6.2.0",
+    "eslint": "9.38.0",
+    "eslint-plugin-chai-friendly": "1.1.0",
+    "mocha": "11.7.4",
     "ts-node": "10.9.2",
     "tslib": "2.8.1",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.38.0"
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.2"
   }
 }
